--- a/_pages/404.html
+++ b/_pages/404.html
@@ -1,7 +1,7 @@
 ---
 layout: 404
 author_profile: true
-permalink: /404/
+permalink: /404.html
 ---
 <h1><strong>😱 Oops!</strong></h1>
 <h2>This page doesn't exist.</h2>
