--- a/_pages/404.html
+++ b/_pages/404.html
@@ -25,12 +25,12 @@ This is a 404 error, which means you've clicked on a bad link or entered an inva
         </button>
 		-->
 		<div class="search-content is--visible">
-          <div class="search-content__inner-wrap__404">
-			<form class="search-content__form__404" onkeydown="return event.key != 'Enter';">
+          <div class="search-content__inner-wrap is--404">
+			<form class="search-content__form is--404" onkeydown="return event.key != 'Enter';">
                 <label class="sr-only" for="search">
                       Enter your search term...
                 </label>
-                <input type="search" id="search" class="search-input__404" tabindex="-1" placeholder="Enter your search term...">
+                <input type="search" id="search" class="search-input is--404" tabindex="-1" placeholder="Enter your search term...">
             </form>
             <div id="results" class="results"></div></div>
 
